port project to main

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "b-amey.github.io",
+  "name": "ameybhavsar24.github.io",
   "version": "0.1.0",
-  "homepage": "https://b-amey.github.io",
+  "homepage": "https://ameybhavsar24.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
